switch from jolt-java v0.1.0 to jolt-jni v0.1.10